
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline void slow_down(void)
{
 int k;

 for (k = 0; k < 10000; k++);
}
